# MagicWindows

./: .gitignore  CLAUDE.md  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  wrangler.toml
.github/workflows/: build.yml
docs/: CONTRIBUTING.md  TROUBLESHOOTING.md  metrics.json
docs/release-notes/: v0.2.0.md  v0.4.0.md  v0.4.1.md
layouts/: apple-de-qwertz.json  apple-es-qwerty.json  apple-fr-azerty.json  apple-it-qwerty.json  apple-uk-qwerty.json  apple-us-qwerty.json
scripts/: Fix-ClaudeCodeShiftEnter.ps1  build-detection-catalogue.mjs  build-portable.mjs  build-web-release.mjs  build-web-release.test.mjs  measure-bundle.mjs
scripts/web/: Install-Layout.cmd  Install-Layout.ps1  README.txt  Uninstall-Layout.cmd  Uninstall-Layout.ps1
src/: App.svelte  app.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/klc-codegen/: Cargo.toml
src-tauri/klc-codegen/src/: lib.rs
src-tauri/src/: lib.rs
src/components/: ElevatedErrorPanel.svelte  KeyboardVisual.svelte
src/lib/: detection.test.ts  detection.ts  healthCheck.test.ts  healthCheck.ts  i18n.ts  scancode.ts  stores.svelte.ts  stores.ts  types.ts
src/pages/: About.svelte  BluetoothPairing.svelte  Detect.svelte  Done.svelte  HealthCheck.svelte  Install.svelte  Modifiers.svelte  Preview.svelte  Select.svelte  Settings.svelte  Test.svelte  Welcome.svelte
web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/public/: manifest.json
web/src/: App.svelte  app.css  main.ts
(+28 files in other folders)
