[package]
name = "klc-codegen"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT OR Apache-2.0"
publish = false
description = "Windows keyboard layout DLL (C source) generator for MagicWindows"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
